--- a/src/styles/Games.css
+++ b/src/styles/Games.css
@@ -51,3 +51,84 @@
 .card:link    { color: white; text-decoration: none; }
 .card:visited { color: white; text-decoration: none; }
 .card:active  { color: white; text-decoration: none; }
+
+
+
+
+.main-card {
+    text-align: center;
+    font-size: small;
+    margin: 10px;
+    background-color: white;
+    color: black;
+    width: 300px;
+    height: 150px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.game-pic {
+    width: 300px;
+    height: 150px;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+opacity: 0% ;
+    transition: all 0.5s ease-in-out;
+}
+
+.main-card:hover .game-pic{
+    opacity: 100%;
+    transition: all 0.5s ease-in-out;
+}
+
+.game-viewer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 30px;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+    background-color: white;
+    position: absolute;
+    opacity: 100%;
+    transition: all 0.5s ease-in-out;
+    color: rgb(67, 67, 179);
+    opacity: 0%;
+    text-decoration: none;
+}
+
+.game-viewer2 {
+    border: none;
+    background-color: white;
+    text-align: center;
+    color: rgb(67, 67, 179);
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+.main-card:hover .game-viewer{
+    opacity: 100%;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+.game-viewer:hover {
+    background-color:rgb(67, 67, 179) ;
+    color: white;
+    transition: all 0.5s ease-in-out;
+    text-decoration: none;
+}
+.game-viewer:hover .game-viewer2{
+    background-color:rgb(67, 67, 179) ;
+    color: white;
+    transition: all 0.5s ease-in-out;
+    text-decoration: none;
+}
