--- a/src/styles/Games.css
+++ b/src/styles/Games.css
@@ -132,3 +132,19 @@ opacity: 0% ;
     transition: all 0.5s ease-in-out;
     text-decoration: none;
 }
+
+.full-card:hover {
+    box-shadow: 0 10px 30px 0 rgba(255, 255, 255, 0.2);
+    transition: all 0.5s ease-in-out;
+
+}
+
+.card-body{
+    opacity: 50%;
+    transition: all 0.5s ease-in-out;
+}
+
+.card-body:hover {
+    opacity: 100%;
+    transition: all 0.5s ease-in-out;
+}
