--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -83,7 +83,7 @@
     font-weight: 1000;
     margin: 0;
     letter-spacing: 2px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 
