--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Montserrat:wght@200&family=Open+Sans&display=swap');
 
-
+.video {
+    position: fixed;
+    right: 0;
+   bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+    background-attachment: fixed;
+  }
 .back {
-    background-image: url(../imgs/home-back.jpg);
+    background: url(../imgs/Hom.mp4);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
